[gd_scene load_steps=5 format=3 uid="uid://bed66msopnu4"]

[ext_resource type="Script" path="res://src/scripts/card_scripts/card_scene_model.gd" id="1_ixfvr"]
[ext_resource type="Texture2D" uid="uid://diceck4cjlhy5" path="res://src/assets/card_template/cardtemplate.png" id="2_w1cck"]

[sub_resource type="LabelSettings" id="LabelSettings_nnlno"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ri7pu"]
size = Vector2(149.5, 230)

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(75, 230)
script = ExtResource("1_ixfvr")

[node name="CardTemplateSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 230.0
texture = ExtResource("2_w1cck")

[node name="CardSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 12.8346
offset_top = 18.7838
offset_right = 52.8346
offset_bottom = 58.7838
scale = Vector2(2.9, 1.9)
expand_mode = 2

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 16.1634
offset_top = 122.058
offset_right = 183.163
offset_bottom = 236.058
scale = Vector2(0.7, 0.7)
text = "description
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
clip_text = true

[node name="CardNameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 11.9938
offset_top = -1.30338
offset_right = 105.994
offset_bottom = 21.6966
scale = Vector2(0.8, 0.8)
text = "CARD NAME
"
label_settings = SubResource("LabelSettings_nnlno")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 3

[node name="CostLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 122.498
offset_top = 8.25467
offset_right = 162.498
offset_bottom = 31.2547
scale = Vector2(0.6, 0.6)
text = "cost
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DmgLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 4.14949
offset_top = 200.066
offset_right = 44.1495
offset_bottom = 223.066
scale = Vector2(0.8, 0.8)
text = "dmg"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 208.0
offset_right = 116.0
offset_bottom = 231.0
scale = Vector2(0.806288, 0.806288)
text = "Type"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardArea" type="Area2D" parent="."]

[node name="CardCollision" type="CollisionShape2D" parent="CardArea"]
position = Vector2(75.25, 115)
shape = SubResource("RectangleShape2D_ri7pu")
